--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body {
     padding: 0;
     background: url(background.jpeg) no repeat;
     background-size: cover;
-
 }
 .box{
     width: 450 px;
@@ -15,7 +14,7 @@ body {
     color: white;
     font-family: 'Century Gothic', sans-serif;    
 }
-.box{
+.box-img{
     border-radius: 50%;
     width: 200px;
     height: 200px;
