--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url(background.jpg) no repeat;
+    background: url(background.jpg) no repeat;
     background-size: cover;
 }
 .box{
