--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
     text-align: center;
     margin: auto;
     margin-top: 5%;
-    color: #fff;
+    color: #396af;
     font-family: 'Century Gothic', sans-serif;    
 }
 .box-img{
