--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
     text-align: center;
     margin: auto;
     margin-top: 5%;
-    color: white;
+    color: black;
     font-family: 'Century Gothic', sans-serif;    
 }
 .box-img{
@@ -40,7 +40,7 @@ ul{
     list-style: none;  
 }
 .box li a{
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 60px;  
     transition: all ease-in-out 250ms;
