--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,14 @@ body{
     margin: 0;
     padding: 0;
 }
+.home{
+    display:flex;
+    flex-wrap: wrap;
+}
+.in-flex{
+    flex: 1;
+    padding: 25px;
+}
 .box{
     width: 450 px;
     background: #396afc;
