--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,6 @@ body{
     margin: 0;
     padding: 0;
 }
-.home{
-    display:flex;
-    flex-wrap: wrap;
-}
-.in-flex{
-    flex: 1;
-    padding: 25px;
-}
 .box{
     width: 450 px;
     background: #396afc;
@@ -18,7 +10,9 @@ body{
     margin: auto;
     margin-top: 5%;
     color: black;
-    font-family: 'Monaco', monospace;    
+    font-family: 'Monaco', monospace;  
+    display:flex;
+    flex-wrap: wrap  
 }
 .box-img{
     border-radius: 50%;
