--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
 }
 .box{
     width: 450 px;
-    background: #396afc;
+    background: #ddd;
     padding: 40px;
     text-align: center;
     margin: auto;
